k8s/removed/adguard-home/custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: default
  labels:
    app: adguard
spec:
  selector:
    matchLabels:
      app: adguard
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:beta@sha256:de5811dcc32a9b32d06224a6f2ee2c55b44367cf325804e8a72ebdd76b0690d3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 53
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: configmap
          configMap:
            name: config
        - name: config
          emptyDir: {}
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adguard.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: adguard.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: adguard
spec:
  selector:
    app: adguard
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.1.253
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
